--- a/locales/hi.json
+++ b/locales/hi.json
@@ -24,5 +24,12 @@
   "footer": {
     "copyright": "© 2025 FarmStellar. सर्वाधिकार सुरक्षित हैं.",
     "mission": "गेमिफाइड लर्निंग के माध्यम से किसानों को सशक्त बनाना"
+  },
+  "i18n": {
+    "detected_auto": "{{lang}} चुनी गई है {{source}}। सेटिंग्स में बदलें।",
+    "source_geo": "आपके क्षेत्र के आधार पर",
+    "source_nav": "आपके ब्राउज़र भाषा के आधार पर",
+    "open_settings": "सेटिंग्स खोलें",
+    "dismiss": "ठुकराएँ"
   }
 }
