--- a/locales/ml.json
+++ b/locales/ml.json
@@ -24,5 +24,12 @@
   "footer": {
     "copyright": "© 2025 FarmStellar. എല്ലാ അവകാശങ്ങളും സംരക്ഷിതം.",
     "mission": "ഗെയിമിഫൈഡ് പഠനത്തിലൂടെ രാത്രിയിൽ കാർഷികർ സജ്ജമാക്കുന്നു"
+  },
+  "i18n": {
+    "detected_auto": "{{lang}} {{source}} ആയി തിരഞ്ഞെടുക്കപ്പെട്ടു. സജ്ജീകരണങ്ങളിൽ മാറ്റുക.",
+    "source_geo": "നിങ്ങളുടെ പ്രദേശത്തിന്റെ അടിസ്ഥാനത്തിൽ",
+    "source_nav": "നിങ്ങളുടെ ബ്രൗസറിന്റെ ഭാഷയുടെ അടിസ്ഥാനത്തിൽ",
+    "open_settings": "സജ്ജീകരണങ്ങൾ തുറക്കുക",
+    "dismiss": "മറുക്കുക"
   }
 }
