--- a/locales/mr.json
+++ b/locales/mr.json
@@ -24,5 +24,12 @@
   "footer": {
     "copyright": "© 2025 FarmStellar. सर्व हक्क राखीव.",
     "mission": "गेमिफाइड लर्निंगद्वारे शेतकर्‍यांना सक्षम करणे"
+  },
+  "i18n": {
+    "detected_auto": "{{lang}} निवडली गेली आहे {{source}}. सेटिंग्जमध्ये बदला.",
+    "source_geo": "आपल्या प्रदेशाच्या आधारावर",
+    "source_nav": "आपल्या ब्राउझरची भाषा लक्षात घेऊन",
+    "open_settings": "सेटिंग्ज उघडा",
+    "dismiss": "रद्द करा"
   }
 }
