--- a/locales/ta.json
+++ b/locales/ta.json
@@ -24,5 +24,12 @@
   "footer": {
     "copyright": "© 2025 FarmStellar. அனைத்து உரிமைகளும் பாதுகாக்கப்பட்டவை.",
     "mission": "விளையாட்டு வழியாக விவசாயிகளுக்கு மேலிடல்"
+  },
+  "i18n": {
+    "detected_auto": "{{lang}} தேர்வு செய்யப்பட்டு உள்ளது {{source}}. அமைப்புகளில் மாற்றவும்.",
+    "source_geo": "உங்கள் பகுதியின் அடிப்படையில்",
+    "source_nav": "உங்கள் உலாவியின் மொழியின் அடிப்படையில்",
+    "open_settings": "அமைப்புகளை திறக்கவும்",
+    "dismiss": "நிராகரிக்கவும்"
   }
 }
