--- a/locales/hi.json
+++ b/locales/hi.json
@@ -11,6 +11,9 @@
   "hero": {
     "badge": "गेमिफाइड लर्निंग प्लेटफ़ॉर्म",
     "title": "खेल के माध्यम से सतत कृषि में महारत हासिल करें",
+    "titlePart1": "महारत",
+    "titleHighlight": "सतत कृषि",
+    "titlePart2": "खेल के माध्यम से",
     "subtitle": "इंटरएक्टिव क्वेस्ट के माध्यम से हजारों किसानों के साथ जुड़ें, पुरस्कार कमाएँ और एक टिकाऊ भविष्य बनाएं।",
     "startJourney": "अपनी यात्रा शुरू करें",
     "learnMore": "और जानें",
@@ -66,7 +69,6 @@
     "open_settings": "सेटिंग्स खोलें",
     "dismiss": "ठुकराएँ"
   },
-
   "login": {
     "mobileLabel": "मोबाइल नंबर",
     "placeholder": "9876543210",
@@ -91,13 +93,102 @@
     "types": {
       "beginner": {
         "title": "शुरुआती किसान",
-        "desc": "मैं खेती में नया हूं या अभी शुरुआत कर रहा हूं"
+        "desc": "मैं खेती में नया हूँ या अभी शुरुआत कर रहा हूँ"
       },
       "pro": {
         "title": "प्रो किसान",
-        "desc": "मैं एक अनुभवी किसान हूं जो अनुकूलन की तलाश में है"
+        "desc": "मैं एक अनुभवी किसान हूँ जो अनुकूलन की तलाश में है"
       }
     },
-    "continue": "जारी रखें"
+    "continue": "जारी रखें",
+    "basicInfo": {
+      "heading": "अपने बारे में बताइए",
+      "subheading": "यह आपके अनुभव को व्यक्तिगत करने में मदद करता है",
+      "labels": {
+        "name": "पूरा नाम",
+        "email": "ईमेल",
+        "location": "स्थान"
+      },
+      "placeholders": {
+        "name": "आपका नाम",
+        "email": "you@example.com",
+        "location": "गाँव, जिला, राज्य"
+      },
+      "detect": "स्थान प्राप्त करें",
+      "detecting": "प्राप्त किया जा रहा है...",
+      "continue": "जारी रखें",
+      "errors": {
+        "name": "कृपया अपना पूरा नाम दर्ज करें (कम से कम 2 वर्ण)।",
+        "email": "कृपया एक वैध ईमेल पता दर्ज करें।",
+        "location": "कृपया अपना स्थान प्रदान करें।"
+      }
+    },
+    "farmDetails": {
+      "heading": "अपने खेत के बारे में बताएं",
+      "subheading": "हमें अपना अनुभव व्यक्तिगत करने में मदद करें",
+      "noLand": {
+        "toggleLabel": "मैं शुरुआत कर रहा हूँ और अभी मेरा खेत नहीं है",
+        "heading": "बढ़िया! आइए आपकी खेती की यात्रा शुरू करें",
+        "body": "आप ज्ञान-आधारित क्वेस्ट और ट्यूटोरियल पाएंगे। जब आप अपना खेत शुरू करने के लिए तैयार होंगे, तो आप अपनी प्रोफ़ाइल से कभी भी विवरण जोड़ सकते हैं।"
+      },
+      "labels": {
+        "farmName": "खेत का नाम (वैकल्पिक)",
+        "location": "स्थान",
+        "landSize": "भूमि का आकार (एकड़ में)"
+      },
+      "placeholders": {
+        "farmName": "Green Valley Farm",
+        "location": "गाँव, जिला, राज्य",
+        "soilType": "मिट्टी का प्रकार चुनें",
+        "waterSource": "पानी का स्रोत चुनें"
+      },
+      "buttons": {
+        "detecting": "डेटेक्ट कर रहा है...",
+        "useCurrentLocation": "वर्तमान स्थान का उपयोग करें",
+        "saving": "सहेजा जा रहा है...",
+        "continue": "जारी रखें",
+        "back": "वापस"
+      },
+      "units": {
+        "acres": "एकड़"
+      },
+      "options": {
+        "soil": {
+          "clay": "चिपचिपी",
+          "sandy": "रेतीली",
+          "loamy": "लोअमी",
+          "silty": "सिल्टी",
+          "peaty": "पीटी",
+          "chalky": "चॉकी"
+        },
+        "water": {
+          "well": "कुवा",
+          "borewell": "बोरवेल",
+          "canal": "नहर",
+          "river": "नदी",
+          "rainwater": "वर्षा जल संचयन",
+          "pond": "तालाब"
+        }
+      },
+      "errors": {
+        "location": "कृपया अपने खेत का स्थान दें",
+        "landSize": "कृपया मान्य भूमि आकार दर्ज करें (> 0)",
+        "soilType": "कृपया मिट्टी का प्रकार चुनें",
+        "waterSource": "कृपया पानी का स्रोत चुनें",
+        "geolocationNotSupported": "आपके ब्राउज़र द्वारा जियोलोकेशन समर्थित नहीं है",
+        "unableToDetermineAddress": "निर्देशांक से पता निर्धारित नहीं किया जा सका",
+        "reverseGeocodeFailed": "स्थान के लिए रिवर्स जियोकोड विफल रहा",
+        "getLocationFailed": "स्थान प्राप्त करने में विफल",
+        "completeProfile": "प्रोफ़ाइल पूरा करने में विफल",
+        "saveFailed": "खेत विवरण सहेजने में विफल",
+        "saveFailedTryAgain": "खेत विवरण सहेजने में विफल। कृपया पुन: प्रयास करें।"
+      },
+      "messages": {
+        "pendingSynced": "लंबित खेत सिंक हो गया",
+        "profileCompleted": "प्रोफ़ाइल पूर्ण हुई",
+        "saved": "सफलतापूर्वक सहेजा गया",
+        "savedLocally": "स्थानीय रूप से सहेजा गया। ऑनलाइन होने पर सिंक करेगा।"
+      }
+    }
   }
 }
