--- a/locales/ml.json
+++ b/locales/ml.json
@@ -11,6 +11,9 @@
   "hero": {
     "badge": "ഗെയിമിഫൈഡ് പഠന പ്ലാറ്റ്‌ഫോം",
     "title": "കളിക്കുമ്പോൾ നിഴൽവായുള്ള കൃഷി പഠിക്കുക",
+    "titlePart1": "അധിനിവേശമാക്കുക",
+    "titleHighlight": "സ്ഥിരനായ കൃഷി",
+    "titlePart2": "കളിയുടെ വഴി",
     "subtitle": "പരസ്പര പ്രവർത്തന ചവിട്ടുകൾ വഴി നൂതന കാർഷിക സാങ്കേതിക വിദ്യകൾ പഠിക്കുക, ബഹുമതികൾ നേടുക.",
     "startJourney": "നിങ്ങളുടെ യാത്ര ആരംഭിക്കുക",
     "learnMore": "കൂടുതൽ പഠിക്കുക",
@@ -43,7 +46,8 @@
     "feature6": {
       "title": "ബഹുഭാഷാ പിന്തുണ",
       "desc": "വിവിധ പ്രാദേശിക ഭാഷകളിലെ പിന്തുണയോടെ നിങ്ങളുടെ ഇഷ്ട ഭാഷയിൽ പഠിക്കുക."
-    }
+    },
+    "continue": "തുടരുക"
   },
   "cta": {
     "title": "നിങ്ങളുടെ കൃഷി മാറ്റാൻ സജ്ജമാണോ?",
@@ -98,6 +102,93 @@
         "desc": "ഞാൻ പരിചയസമ്പന്നനായ കർഷകൻ ആണ്, മെച്ചപ്പെടുത്താൻ നോക്കുന്നു"
       }
     },
-    "continue": "തുടരുക"
+    "continue": "തുടരുക",
+    "basicInfo": {
+      "heading": "നിങ്ങളെക്കുറിച്ച് പറയുക",
+      "subheading": "ഇത് നിങ്ങളുടെ അനുഭവം വ്യക്തിഗതമാക്കാൻ സഹായിക്കുന്നു",
+      "labels": {
+        "name": "പൂർണ്ണ പേര്",
+        "email": "ഇമെയിൽ",
+        "location": "സ്ഥലം"
+      },
+      "placeholders": {
+        "name": "നിങ്ങളുടെ പേര്",
+        "email": "you@example.com",
+        "location": "ഗ്രാമം, ജില്ല, സംസ്ഥാന"
+      },
+      "detect": "സ്ഥലം നേടുക",
+      "detecting": "എടുക്കുന്നു...",
+      "continue": "തുടരുക",
+      "errors": {
+        "name": "ദയവായി നിങ്ങളുടെ പൂർണ്ണ പേരും നൽകുക (കുറഞ്ഞത് 2 അക്ഷരങ്ങൾ).",
+        "email": "ദയവായി സാധുവായ ഇമെയിൽ വിലാസം നൽകുക.",
+        "location": "ദയവായി നിങ്ങളുടെ സ്ഥലം നൽകുക."
+      }
+    },
+    "farmDetails": {
+      "heading": "നിങ്ങളുടെ ഫാംയെക്കുറിച്ച് ഞങ്ങളോട് പറയുക",
+      "subheading": "നിങ്ങളുടെ അനുഭവം വ്യക്തിപരമാക്കാൻ സഹായിക്കുക",
+      "noLand": {
+        "toggleLabel": "ഞാൻ പുതിയവൻ/പുതിയവയാണ്, എനിക്ക് ഫാം ഇല്ല",
+        "heading": "അട്രീക്കാം! നിങ്ങളുടെ കർഷക യാത്ര ആരംഭിക്കാം",
+        "body": "നിങ്ങൾക്ക് അറിവ് അടിസ്ഥാനമാക്കിയുള്ള ക്വെസ്റ്റുകൾക്കും ട്യൂട്ടോറിയലുകൾക്കും ആക്‌സസ് ലഭിക്കും. നിങ്ങളുടെ ഫോം തുടങ്ങാൻ തയ്യാറായപ്പോൾ, നിങ്ങൾക്ക് പ്രൊഫൈൽ മുതൽവെ വിവരങ്ങൾ ചേർക്കാം."
+      },
+      "labels": {
+        "farmName": "ഫാം പേര (ഐച്ഛിക)",
+        "location": "സ്ഥലം",
+        "landSize": "ഭൂമിയുടെ വലുപ്പം (ഏക്കറിൽ)"
+      },
+      "placeholders": {
+        "farmName": "Green Valley Farm",
+        "location": "ഗ്രാമം, జిల్లా, സംസ്ഥാനം",
+        "soilType": "മണ്ണിന്റെ തരം തിരഞ്ഞെടുക്കുക",
+        "waterSource": "ജലോത്രം തിരഞ്ഞെടുക്കുക"
+      },
+      "buttons": {
+        "detecting": "കണ്ടെടുത്തു...",
+        "useCurrentLocation": "നിലവിലുള്ള സ്ഥലം ഉപയോഗിക്കുക",
+        "saving": "സംരക്ഷിക്കുന്നു...",
+        "continue": "തുടരുക",
+        "back": "പിന്നിലേക്ക്"
+      },
+      "units": { "acres": "ഏക്കർ" },
+      "options": {
+        "soil": {
+          "clay": "ക്ളേ",
+          "sandy": "മുരുകം",
+          "loamy": "ലോമി",
+          "silty": "സിൽട്ടി",
+          "peaty": "പീട്ടി",
+          "chalky": "ചോക്കീ"
+        },
+        "water": {
+          "well": "കിണർ",
+          "borewell": "ബോർവെൽ",
+          "canal": "നാലാർ",
+          "river": "നദി",
+          "rainwater": "മഴജലം സംഭരണം",
+          "pond": "കുളം"
+        }
+      },
+      "errors": {
+        "location": "ദയവായി നിങ്ങളുടെ ഫാമിന്റെ സ്ഥലം നൽകിയേക്കുക",
+        "landSize": "ദയവായി സാധുവായ ഭൂമിയുടെ വലുപ്പം (> 0) നൽകുക",
+        "soilType": "ദയവായി മണ്ണിന്റെ തരം തിരഞ്ഞെടുക്കുക",
+        "waterSource": "ദയവായി ജലോത്രം തിരഞ്ഞെടുക്കുക",
+        "geolocationNotSupported": "നിങ്ങളുടെ ബ്രൗസർ ജിയോളൊക്കേഷൻ പിന്തുണയ്ക്കുന്നില്ല",
+        "unableToDetermineAddress": "സമനിരീക്ഷണത്തിൽ നിന്നുള്ള വിലാസം കണ്ടെത്താൻ കഴിയുന്നില്ല",
+        "reverseGeocodeFailed": "റിവേഴ്‌സ് ജിയോകോഡ് പരാജയപ്പെട്ടു",
+        "getLocationFailed": "സ്ഥലം കണ്ടെത്താൻ പരാജയപ്പെട്ടു",
+        "completeProfile": "പ്രൊഫൈൽ പൂർത്തീകരിക്കാൻ കഴിഞ്ഞില്ല",
+        "saveFailed": "ഫാം വിശദാംശങ്ങൾ സംഭരിക്കാൻ പരാജയമായി",
+        "saveFailedTryAgain": "ഫാം വിശദാംശങ്ങൾ സംഭരിക്കാൻ പരാജയപ്പെട്ടു. ദയവായി വീണ്ടും ശ്രമിക്കുക."
+      },
+      "messages": {
+        "pendingSynced": "ലോകൽ പ്രധാന സെർവറോട് സമന്വയിച്ചു",
+        "profileCompleted": "പ്രൊഫൈൽ പൂർത്തിയായി",
+        "saved": "സേവ് ചെയ്തു",
+        "savedLocally": "ലോകലായി സംരക്ഷിച്ചു. ഓൺലൈനായപ്പോൾ സമന്വയിക്കും."
+      }
+    }
   }
 }
