--- a/locales/mr.json
+++ b/locales/mr.json
@@ -11,6 +11,9 @@
   "hero": {
     "badge": "गेमिफाइड लर्निंग प्लॅटफॉर्म",
     "title": "खेळाद्वारे शाश्वत शेतीत पारंगत व्हा",
+    "titlePart1": "पारंगत",
+    "titleHighlight": "शाश्वत शेती",
+    "titlePart2": "खेळाद्वारे",
     "subtitle": "परस्परात्मक क्वेस्टद्वारे हजारो शेतकर्‍यांमध्ये सामील व्हा, बक्षिसे मिळवा आणि शाश्वत भविष्य निर्माण करा.",
     "startJourney": "आपली यात्रा सुरू करा",
     "learnMore": "अधिक जाणून घ्या",
@@ -43,7 +46,8 @@
     "feature6": {
       "title": "बहुभाषिक समर्थन",
       "desc": "विभिन्न प्रादेशिक भाषांसाठी समर्थनासह तुमच्या पसंतीच्या भाषेत शिका."
-    }
+    },
+    "continue": "सुरू करा"
   },
   "cta": {
     "title": "तुम्ही तुमची शेती बदलायची तयार आहात का?",
@@ -98,6 +102,93 @@
         "desc": "मी एक अनुभवी शेतकरी आहे जो अनुकूलन शोधत आहे"
       }
     },
-    "continue": "सुरू करा"
+    "continue": "सुरू करा",
+    "basicInfo": {
+      "heading": "आपल्या बद्दल सांगा",
+      "subheading": "हे तुमचा अनुभव वैयक्तिक करण्यास मदत करते",
+      "labels": {
+        "name": "पूर्ण नाव",
+        "email": "ईमेल",
+        "location": "ठिकाण"
+      },
+      "placeholders": {
+        "name": "तुमचे नाव",
+        "email": "you@example.com",
+        "location": "गाव, तालुका, राज्य"
+      },
+      "detect": "ठिकाण मिळवा",
+      "detecting": "मिळवत आहे...",
+      "continue": "सुरू करा",
+      "errors": {
+        "name": "कृपया आपले पूर्ण नाव लिहा (किमान 2 अक्षरे).",
+        "email": "कृपया वैध ईमेल पत्ता द्या.",
+        "location": "कृपया आपले ठिकाण द्या."
+      }
+    },
+    "farmDetails": {
+      "heading": "तुमच्या शेताबद्दल सांगावे",
+      "subheading": "आम्हाला तुमचा अनुभव वैयक्तिक करण्यास मदत करा",
+      "noLand": {
+        "toggleLabel": "मी सुरुवातीचा आहे आणि माझ्याकडे अजून शेत नाही",
+        "heading": "छान! चला तुमची शेतीची यात्रा सुरू करूया",
+        "body": "तुम्हाला ज्ञान-आधारित क्वेस्ट आणि ट्यूटोरियल मिळतील. जेव्हा तुम्ही तुमचे स्वतःचे शेत सुरू करण्यास तयार असाल, तेव्हा तुम्ही तुमच्या प्रोफाइलमधून कधीही तपशील जोडू शकता."
+      },
+      "labels": {
+        "farmName": "शेताचे नाव (ऐच्छिक)",
+        "location": "ठिकाण",
+        "landSize": "जमिनीचा आकार (एकरमध्ये)"
+      },
+      "placeholders": {
+        "farmName": "Green Valley Farm",
+        "location": "गाव, तालुका, राज्य",
+        "soilType": "मातीचा प्रकार निवडा",
+        "waterSource": "पाण्याचा स्रोत निवडा"
+      },
+      "buttons": {
+        "detecting": "मिळवत आहे...",
+        "useCurrentLocation": "सध्याच्या स्थानाचा वापर करा",
+        "saving": "साठवत आहे...",
+        "continue": "सुरू करा",
+        "back": "मागे"
+      },
+      "units": { "acres": "एकर" },
+      "options": {
+        "soil": {
+          "clay": "क्ले",
+          "sandy": "वाळूट",
+          "loamy": "लोअमी",
+          "silty": "सिल्टी",
+          "peaty": "पीटी",
+          "chalky": "चॉकी"
+        },
+        "water": {
+          "well": "वेल",
+          "borewell": "बोअरवेल",
+          "canal": "कालवा",
+          "river": "नदी",
+          "rainwater": "पावसाचे पाणी साठवण",
+          "pond": "तळाव"
+        }
+      },
+      "errors": {
+        "location": "कृपया तुमचे शेताचे ठिकाण द्या",
+        "landSize": "कृपया वैध जमिनीचा आकार (> 0) भरा",
+        "soilType": "कृपया मातीचा प्रकार निवडा",
+        "waterSource": "कृपया पाण्याचा स्रोत निवडा",
+        "geolocationNotSupported": "तुमच्या ब्राउझरद्वारे जिओलोकेशन समर्थित नाही",
+        "unableToDetermineAddress": "निर्देशांकांकडून पत्ता ठरवता आला नाही",
+        "reverseGeocodeFailed": "रिव्हर्स जिओकोड अयशस्वी",
+        "getLocationFailed": "स्थान मिळवण्यात अयश",
+        "completeProfile": "प्रोफाइल पूर्ण करण्यात अयश",
+        "saveFailed": "शेत तपशील साठवण्यात अयश",
+        "saveFailedTryAgain": "शेत तपशील साठवण्यात अयश. कृपया पुन्हा प्रयत्न करा."
+      },
+      "messages": {
+        "pendingSynced": "प्रलंबित शेत समक्रमित झाले",
+        "profileCompleted": "प्रोफाइल पूर्ण झाले",
+        "saved": "यशस्वीरित्या जतन केले",
+        "savedLocally": "स्थानिक पातळीवर जतन केले. ऑनलाईन असताना समक्रमित केले जाईल."
+      }
+    }
   }
 }
