--- a/locales/ta.json
+++ b/locales/ta.json
@@ -11,6 +11,9 @@
   "hero": {
     "badge": "விளையாட்டு வழியில் பயில்தல்",
     "title": "விளையாட்டின் மூலம் நிலைத்திருக்கும் விவசாயத்தை கற்கவும்",
+    "titlePart1": "அறிந்து கொள்",
+    "titleHighlight": "நிலையான வேளாண்மை",
+    "titlePart2": "விளையாட்டின் மூலம்",
     "subtitle": "இணையப்பயணிகள் மூலம் நவீன வேளாண் நுட்பங்களை கற்கவும், பரிசுகள் சம்பாதிக்கவும்.",
     "startJourney": "உங்கள் பயணத்தைத் தொடங்கு",
     "learnMore": "மேலும் அறிய",
@@ -43,7 +46,8 @@
     "feature6": {
       "title": "பலமொழி ஆதரவு",
       "desc": "பல பிராந்திய மொழிகளுக்கான ஆதரவு மூலம் உங்கள் விருப்ப மொழியில் கற்றுக்கொள்ளுங்கள்."
-    }
+    },
+    "continue": "தொடரவும்"
   },
   "cta": {
     "title": "உங்கள் விவசாயத்தை மாற்ற தயாரா?",
@@ -98,6 +102,93 @@
         "desc": "நான் அனுபவமுள்ள விவசாயி, மேம்படுத்த தேவை"
       }
     },
-    "continue": "தொடரவும்"
+    "continue": "தொடரவும்",
+    "basicInfo": {
+      "heading": "உங்களைப் பற்றி சொல்லுங்கள்",
+      "subheading": "இது உங்கள் அனுபவத்தை தனிப்பயனாக்க உதவும்",
+      "labels": {
+        "name": "முழுப்பெயர்",
+        "email": "மின்னஞ்சல்",
+        "location": "இடம்"
+      },
+      "placeholders": {
+        "name": "உங்கள் பெயர்",
+        "email": "you@example.com",
+        "location": "கிராமம், மாவட்டம், மாநிலம்"
+      },
+      "detect": "இடத்தைப் பெறு",
+      "detecting": "பெறப்படுகிறது...",
+      "continue": "தொடரவும்",
+      "errors": {
+        "name": "தயவு செய்து முழு பெயரை உள்ளிடவும் (குறைந்தது 2 எழுத்துகள்).",
+        "email": "தயவு செய்து செல்லுபடியாகும் மின்னஞ்சல் முகவரியை உள்ளிடவும்.",
+        "location": "தயவு செய்து உங்கள் இடத்தை குறிப்பிடவும்."
+      }
+    },
+    "farmDetails": {
+      "heading": "உங்கள் கிராமத்தைப் பற்றி சொல்லுங்கள்",
+      "subheading": "உங்கள் அனுபவத்தை தனிப்பயனாக்குவதற்கு உதவுங்கள்",
+      "noLand": {
+        "toggleLabel": "நான் தொடக்கப் பயனர் மற்றும் எனக்கு இன்னும் ஒரு பண்ணை இல்லை",
+        "heading": "சிறந்தது! உங்கள் வேளாண் பயணத்தைத் தொடங்குவோம்",
+        "body": "நீங்கள் அறிவு அடிப்படையிலான குயெஸ்ட்களையும் பயிற்சிகளையும் அணுகுவீர்கள். உங்கள் சொந்த பண்ணையைத் தொடங்க தயார் என்றால், நீங்கள் எப்போது வேண்டுமானாலும் உங்கள் ப்ரொஃபைலிலிருந்து விவரங்களைச் சேர்க்கலாம்."
+      },
+      "labels": {
+        "farmName": "பண்ணை பெயர் (விருப்பமான)",
+        "location": "இடம்",
+        "landSize": "நிலத்தின் அளவு (ஏக்கரில்)"
+      },
+      "placeholders": {
+        "farmName": "Green Valley Farm",
+        "location": "கிராமம், மாவட்டம், மாநிலம்",
+        "soilType": "மண்ணின் வகை தேர்வு செய்யவும்",
+        "waterSource": "நீரின் ஆதாரத்தைத் தேர்வு செய்க"
+      },
+      "buttons": {
+        "detecting": "கண்டறிகிறது...",
+        "useCurrentLocation": "தற்போதைய இடத்தைப் பயன்படுத்தவும்",
+        "saving": "சேமுகிறது...",
+        "continue": "தொடரவும்",
+        "back": "மீண்டும்"
+      },
+      "units": { "acres": "ஏக்கர்" },
+      "options": {
+        "soil": {
+          "clay": "கிளே",
+          "sandy": "மணமொன்",
+          "loamy": "லோமி",
+          "silty": "சில்டி",
+          "peaty": "பீட்டி",
+          "chalky": "சாக்"
+        },
+        "water": {
+          "well": "கிணறு",
+          "borewell": "போர் வெல்",
+          "canal": "கணால்",
+          "river": "நதி",
+          "rainwater": "மழைநீர் சேமிப்பு",
+          "pond": "குழி"
+        }
+      },
+      "errors": {
+        "location": "தயவு செய்து உங்கள் பண்ணையின் இடத்தை கொடுக்கவும்",
+        "landSize": "தயவு செய்து செல்லுபடியாகும் நில அளவை (> 0) இடுக",
+        "soilType": "தயவு செய்து மண்ணின் வகையைத் தேர்ந்தெடுக்கவும்",
+        "waterSource": "தயவு செய்து நீர் ஆதாரம் தேர்வு செய்யவும்",
+        "geolocationNotSupported": "உங்கள் உலாவியில் ஜியோலொக்கேஷன் ஆதரிக்கப்படவில்லை",
+        "unableToDetermineAddress": "இணைய நிரலைக் கொண்டு இடத்தை தீர்மானிக்க முடியாதது",
+        "reverseGeocodeFailed": "மீட்டிச் ஜியோகோடிங் தோல்வி",
+        "getLocationFailed": "இடத்தை பெற முடியவில்லை",
+        "completeProfile": "சுயவிவரத்தை முடிக்க முடியவில்லை",
+        "saveFailed": "பண்ணை விவரங்களைச் சேமிக்க முடியவில்லை",
+        "saveFailedTryAgain": "பண்ணை விவரங்களைச் சேமிக்க முடியவில்லை. மீண்டும் முயற்சி செய்க."
+      },
+      "messages": {
+        "pendingSynced": "பெண்டிங் பண்ணை சமக்கப்பட்டது",
+        "profileCompleted": "சுயவிவரம் முடிக்கப்பட்டது",
+        "saved": "வெற்றிகரமாக சேமிக்கப்பட்டது",
+        "savedLocally": "இலோக்கலாக சேமிக்கப்பட்டது. ஆன்லைன் ஆகும் போது சமம் செய்யப்படும்."
+      }
+    }
   }
 }
