--- a/locales/hi.json
+++ b/locales/hi.json
@@ -243,6 +243,11 @@
       "noData": "कोई लीडरबोर्ड डेटा उपलब्ध नहीं"
     }
   },
+  "greetings": {
+    "morning": "सुप्रभात",
+    "afternoon": "नमस्कार",
+    "evening": "शुभ संध्या"
+  },
   "chatbot": {
     "greeting": "👋 नमस्ते! मैं FarmStellar Bot हूँ, आपका कृषि साथी। आज मैं आपकी कैसे मदद कर सकता हूँ?",
     "placeholder": "मुझसे कृषि के बारे में कुछ भी पूछें...",
