--- a/locales/ml.json
+++ b/locales/ml.json
@@ -243,6 +243,11 @@
       "noData": "ലീഡർബോർഡ് ഡാറ്റ ലഭ്യമല്ല"
     }
   },
+  "greetings": {
+    "morning": "ഗുഡ് മോണിംഗ്",
+    "afternoon": "ഗുഡ് ആഫ്റ്റർനൂൺ",
+    "evening": "ഗുഡ് ഇവനിംഗ്"
+  },
   "chatbot": {
     "greeting": "👋 നമസ്തേ! ഞാൻ FarmStellar Bot, നിങ്ങളുടെ കൃഷി സഹകാരി. ഞാൻ ഇന്ന് നിങ്ങളെ എങ്ങനെ സഹായിക്കാം?",
     "placeholder": "കൃഷിയെ കുറിച്ച് എന്തെങ്കിലും ചോദിക്കുക...",
