--- a/locales/mr.json
+++ b/locales/mr.json
@@ -243,6 +243,11 @@
       "noData": "लीडरबोर्ड डेटा उपलब्ध नाही"
     }
   },
+  "greetings": {
+    "morning": "शुभ सकाळ",
+    "afternoon": "शुभ दुपार",
+    "evening": "शुभ संध्या"
+  },
   "chatbot": {
     "greeting": "👋 नमस्कार! मी FarmStellar Bot आहे, तुमचा शेती साथी. मी आज तुम्हाला कसे मदत करू शकतो?",
     "placeholder": "शेतीविषयी काहीही विचारा...",
