--- a/locales/ta.json
+++ b/locales/ta.json
@@ -243,6 +243,11 @@
       "noData": "தலைமை பட்டியல் தகவல் கிடைக்கவில்லை"
     }
   },
+  "greetings": {
+    "morning": "நல்லது காலை",
+    "afternoon": "நல்லது மதியம்",
+    "evening": "நல்லது மாலை"
+  },
   "chatbot": {
     "greeting": "👋 வணக்கம்! நான் FarmStellar Bot, உங்கள் விவசாய தோழன். நான் இன்று உங்களுக்கு எவ்வாறு உதவ முடியும்?",
     "placeholder": "விவசாயத்தைப் பற்றி எதைப் பற்றிக்கூட கேளுங்கள்...",
